<resources>
    <string name="app_name">LearnBird</string>
    <string name="logo_image_for_splashscreen">logo_image_for_splashscreen</string>
    <string name="loginlogo">LoginLogo</string>
    <string name="hello_there_welcome_back">Welcome to LearnBird!</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="new_to_learnbird_sign_up">New to LearnBird? SIGN UP</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create\nAccount</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_log_in">Already an User? Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="sign_up_back_button">Sign Up Back Button</string>
    <string name="under_development">Under Development</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="enter_college_name">Enter College Name</string>
    <string name="degree_pursuing_completed">Degree Pursuing/Completed</string>
    <string name="enter_your_department">Enter your Department</string>
    <string name="city">City</string>
    <string name="recover_npassword">Recover\nPassword</string>
    <string name="forgot_password_detail">Please provide your account\'s email\nfor which you want to reset\nyour password</string>
    <string name="please_check_your_emai_and_nfollow_the_instructions">Please check your emai and\nfollow the instructions</string>
    <string name="password_reset_link_sent">Password Reset Link Sent</string>
    <string name="login">Login</string>
    <string name="tick_mark_black">Tick Mark Black</string>
</resources>